# memattest

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: manual-test-full-lifecycle.md  manual-test-pubkey-crosscheck.md
docs/superpowers/plans/: 2026-07-06-memattest.md  2026-07-12-pubkey-crosscheck.md  2026-07-13-per-log-config.md  2026-07-15-cli-polish.md  2026-07-15-hook-installer.md  2026-07-17-watch-list.md  2026-07-20-cli-ux.md  2026-07-21-append-lock.md  2026-07-21-session-visibility-install-block.md
docs/superpowers/specs/: 2026-07-06-memattest-design.md  2026-07-12-pubkey-crosscheck-design.md  2026-07-13-per-log-config-design.md  2026-07-15-cli-polish-design.md  2026-07-15-hook-installer-design.md  2026-07-17-watch-list-design.md  2026-07-20-cli-ux-design.md  2026-07-21-append-lock-design.md  2026-07-21-session-start-visible-and-install-warn-design.md  2026-07-22-v2-validator-architecture-design.md
src/memattest/: canonical.py  cli.py  core.py  entry.py  errors.py  identity.py  merkle.py  per_log_config.py  provenance.py  seal.py  store.py
src/memattest/integrations/claude_code/: install.py  settings-snippet.json
tests/: test_adopt.py  test_canonical.py  test_claude_install.py  test_cli.py  test_concurrency.py  test_core.py  test_entry_store.py  test_identity.py  test_merkle_proofs.py  test_merkle_root.py  test_per_log_config.py  test_provenance.py  test_seal.py  test_verify_attacks.py  test_watch.py
