[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "memattest"
version = "0.1.0"
description = "Tamper-evident AI agent memory: RFC 6962 append-only Merkle log with signed tree heads and provenance"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=42",
    "keyring>=24",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
memattest = "memattest.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
